--- a/rails-backend/Gemfile
+++ b/rails-backend/Gemfile
@@ -4,6 +4,8 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.6.1'
 
 gem "active_model_serializers"
+gem "devise", github: "heartcombo/devise"
+gem "devise-jwt"
 gem "rack-cors"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
