--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "babel-plugin-macros": "^3.1.0",
+    "history": "^5.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "redux-logger": "^3.0.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
