--- a/rails-backend/Gemfile
+++ b/rails-backend/Gemfile
@@ -7,13 +7,13 @@ gem "active_model_serializers"
 gem "devise", github: "heartcombo/devise"
 gem "devise-jwt"
 gem "jwt"
-gem "pg"
+# gem "pg"
 gem "rack-cors"
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails', branch: 'main'
 gem 'rails', '~> 6.1.4'
 # Use sqlite3 as the database for Active Record
-# gem 'sqlite3', '~> 1.4'
+gem 'sqlite3', '~> 1.4'
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
